@@ -1,3 +1,7 @@
+/*
+ * $Header$
+ */
+
 #ifndef __SANDBOX_H__
 #define __SANDBOX_H__
 
